--- a/src/main/resources/templates/usr/note/receiveList.html
+++ b/src/main/resources/templates/usr/note/receiveList.html
@@ -32,6 +32,26 @@
         </form>
     </div>
 
+    <!-- 페이징처리 시작 -->
+    <div th:if="${!notes.isEmpty()}" class="mb-12">
+        <ul class="flex flex-row join">
+            <li class="join-item">
+                <a class="btn" th:href="@{|?page=${notes.number-1}|}"  th:classappend="${!notes.hasPrevious} ? 'btn-disabled'">
+                    <span>이전</span>
+                </a>
+            </li>
+            <li class="join-item" th:each="page: ${#numbers.sequence(0, notes.totalPages-1)}"
+                th:if="${page >= notes.number-2 and page <= notes.number+2}">
+                <a class="btn" th:text="${page}" th:href="@{|?page=${page}|}" th:classappend="${page == notes.number} ? 'btn-secondary'"></a>
+            </li>
+            <li class="join-item">
+                <a class="btn" th:href="@{|?page=${notes.number+1}|}" th:classappend="${!notes.hasNext} ? 'btn-disabled'">
+                    <span>다음</span>
+                </a>
+            </li>
+        </ul>
+    </div>
+
     <div class="mt-5"></div>
     <div class="mt-5"></div>
 
