--- a/src/main/resources/templates/usr/note/sendList.html
+++ b/src/main/resources/templates/usr/note/sendList.html
@@ -18,7 +18,7 @@
                     </tr>
                     <tr th:if="${!note.deleteSender}" th:each="note, loop : ${notes}">
                         <td><input type="checkbox" name="deleteId" th:value="${note.id}"></td>
-                        <td th:text="${note.id}"></td>
+                        <td th:text="${notes.totalElements - (notes.number * notes.size) - loop.count + 1}"></td>
                         <td class="truncate-text" th:text="${note.title}"></td>
                         <td class="text-xs" th:text="${#temporals.format(note.createDate, 'YY-MM-dd')}"></td>
                         <td>
