--- a/src/main/resources/templates/usr/note/sendList.html
+++ b/src/main/resources/templates/usr/note/sendList.html
@@ -13,17 +13,15 @@
                         <th><input type="checkbox" id="checkAll"></th>
                         <th>번호</th>
                         <th>제목</th>
+                        <th>수신자</th>
                         <th>등록일</th>
-                        <th>보기</th>
                     </tr>
-                    <tr th:if="${!note.deleteSender}" th:each="note, loop : ${notes}">
+                    <tr th:if="${!note.deleteSender}" th:each="note, loop : ${notes}" th:data-noteid="${note.id}" onclick="detailPage(this)">
                         <td><input type="checkbox" name="deleteId" th:value="${note.id}"></td>
                         <td th:text="${notes.totalElements - (notes.number * notes.size) - loop.count + 1}"></td>
                         <td class="truncate-text" th:text="${note.title}"></td>
+                        <td class="truncate-text" th:text="${note.receiver.nickname}"></td>
                         <td class="text-xs" th:text="${#temporals.format(note.createDate, 'YY-MM-dd')}"></td>
-                        <td>
-                            <a class="btn btn-primary btn-sm" th:href="@{/note/detail/{noteId}(noteId=${note.id})}">확인</a>
-                        </td>
                     </tr>
                 </table>
                 <a href="/note/send" class="btn btn-link">새 쪽지 보내기</a>
@@ -88,6 +86,11 @@
             } else {
                 alert("삭제할 쪽지를 선택해주세요.");
             }
+        }
+
+        function detailPage(row) {
+            var noteId = row.getAttribute("data-noteid");
+            window.location.href = '/note/detail/' + noteId;
         }
     </script>
 </div>
