--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -43,6 +43,8 @@
         document.body.appendChild(el);
     </script>
 
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6042053128442941"
+            crossorigin="anonymous"></script>
 
 </head>
 <body>
