--- a/src/main/resources/templates/usr/note/send.html
+++ b/src/main/resources/templates/usr/note/send.html
@@ -11,8 +11,8 @@
             <input type="text" name="title" class="input input-bordered w-full max-w-xs" placeholder="제목을 입력해주세요.">
         </label>
         <label class="label flex flex-col">
-            <span class="label-text">받는이</span>
-            <input type="text" name="receiver" class="input input-bordered w-full max-w-xs" placeholder="상대방 닉네임을 입력해주세요.">
+            <span class="label-text">수신</span>
+            <input type="text" name="receiver" id="sendTo" class="input input-bordered w-full max-w-xs" placeholder="상대방 닉네임을 입력해주세요.">
         </label>
         <label class="label flex flex-col">
             <span class="label-text">내용</span>
