--- a/src/main/resources/templates/usr/home/fragment/index/books.html
+++ b/src/main/resources/templates/usr/home/fragment/index/books.html
@@ -33,12 +33,12 @@
 
                             <div class="flex gap-3">
                                 <div class="text-sm"><i class="fa-regular fa-user"></i></div>
-                                <div class="text-[4px]" th:text="|총 ${book.playCount}번 도전|"></div>
+                                <div class="text-[4px]" th:text="|총 ${book.challenger}번 도전|"></div>
                             </div>
 
                             <div class="flex gap-3">
                                 <div class="text-sm"><i class="fa-solid fa-check"></i></div>
-                                <div class="text-[4px]" th:utext="|정답률 ${book.rate}%|"></div>
+                                <div class="text-[4px]" th:utext="|정답률 ${book.accuracy}%|"></div>
                             </div>
 
                             <div class="flex gap-3">
