--- a/src/main/resources/templates/usr/search/fragment/book/content.html
+++ b/src/main/resources/templates/usr/search/fragment/book/content.html
@@ -19,7 +19,7 @@
             <div class="text-[6px]" th:text="|${book.author} |"></div>
             <div class="flex gap-1">
                 <div class="text-xs"><i class="fa-regular fa-user"></i></div>
-                <div class="stat-desc" th:text="${book.playCount}"></div>
+                <div class="stat-desc" th:text="${book.challenger}"></div>
                 <div class="text-xs"><i class="fa-regular fa-heart"></i></div>
                 <div class="stat-desc" th:text="${book.recommend}"></div>
             </div>
