feat: 문제집 커버사진 수정 구현

--- a/src/main/resources/templates/usr/book/fragment/create/form.html
+++ b/src/main/resources/templates/usr/book/fragment/create/form.html
@@ -16,15 +16,16 @@
                     <div class="flex justify-center">
                         <div class="mb-5">
 
-                            <img class="h-48 w-40" id="img"
+                            <img class="h-48 w-40" id="previewImage"
                                  src="/images/note/0004.jpg">
                         </div>
                     </div>
 
                     <div class="flex flex-col mb-5">
-                        <input type="file" id="fileInput" name="img"
+                        <input type="file" id="profileImg" name="img"
                                class="file-input file-input-bordered w-full file-input-xs max-w-xs"/>
                     </div>
+
 
                     <div class="form-control">
                         <label class="label">
