--- a/src/main/resources/templates/usr/book/fragment/update/title.html
+++ b/src/main/resources/templates/usr/book/fragment/update/title.html
@@ -8,11 +8,12 @@
 
             <figure class="h-40 drop-shadow-lg">
                 <img th:if="*{img eq null}"
-                     class="h-full" src="/images/note/0004.jpg"/>
+                     class="h-full" src="/images/note/0004.jpg" id="previewImage"/>
 
                 <img th:if="*{img ne null}"
-                     class="h-full" th:src="@{*{img}}"/>
+                     class="h-full" th:src="@{*{img}}" id="previewImage"/>
             </figure>
+
 
             <div class="flex flex-col justify-between w-2/5">
 
@@ -43,6 +44,12 @@
             </div>
 
             <div class="mb-3 w-full">
+
+                <div class="flex flex-col mb-5">
+                    <input type="file" id="profileImg" name="updateImg"
+                           class="file-input file-input-bordered w-full file-input-xs max-w-xs"/>
+                </div>
+
                 <textarea class="textarea textarea-bordered textarea-xs w-full max-w-xs mt-3 h-24"
                           th:field="*{about}"></textarea>
 
