--- a/src/main/resources/templates/usr/book/fragment/create/valid.html
+++ b/src/main/resources/templates/usr/book/fragment/create/valid.html
@@ -1,4 +1,14 @@
 <script th:fragment="valid">
+
+    document.addEventListener("DOMContentLoaded", function() {
+        var imgElement = document.getElementById("cover");
+        var imgUrl = imgElement.src;
+        console.log(imgUrl);
+
+        var urlInput = document.getElementById("plane");
+        urlInput.value = imgUrl;
+    });
+
     function JoinForm__submit(form) {
 
         //-- name 검증 --//
