--- a/src/main/resources/templates/usr/member/mypage.html
+++ b/src/main/resources/templates/usr/member/mypage.html
@@ -21,7 +21,7 @@
                             <a class="badge ml-2" href="/member/profileUpdate">수정</a>
                         </div>
                         <div>
-                            <a th:if="${@rq.member.email == null}" class="badge badge-secondary">보안 강화하기</a>
+                            <a href="/member/registration" th:if="${@rq.member.email == null}" class="badge badge-secondary">보안 강화하기</a>
                         </div>
                     </h2>
 
