--- a/src/main/resources/templates/usr/member/device/authentication.html
+++ b/src/main/resources/templates/usr/member/device/authentication.html
@@ -6,6 +6,9 @@
 
     <!-- 이곳에 로직을 구현해주시면 됩니다 -->
     <div class="p-10 flex flex-col gap-4">
+        <h1 class="text-xl font-bold">평소와 다른 기기(환경)에서 접속하셨습니다.</h1>
+        <h1 class="text-xl font-bold">이메일을 통한 본인 인증 후 서비스를 이용해주세요.</h1>
+        <br>
         <h1 class="text-xl font-bold">가입하신 이메일로 기기 인증코드가 발송되었습니다.</h1>
         <h1 class="text-xl font-bold">이메일을 확인해주세요.</h1>
     </div>
