design: 내 프로필에 사용자id 대신 이메일 표시

--- a/src/main/resources/templates/usr/member/mypage.html
+++ b/src/main/resources/templates/usr/member/mypage.html
@@ -68,10 +68,10 @@
                     <div class="mt-4">
                         <div>
                             <i class="fa-solid fa-user"></i>
-                            사용자
+                            연동 이메일
                         </div>
                         <div class="mt-2">
-                            <span class="badge badge-primary" th:text="${@rq.member.username}"></span>
+                            <span class="badge badge-primary" th:text="${@rq.member.email}"></span>
                         </div>
                     </div>
 
