--- a/src/main/resources/templates/usr/book/fragment/create/valid.html
+++ b/src/main/resources/templates/usr/book/fragment/create/valid.html
@@ -5,7 +5,7 @@
         var imgUrl = imgElement.src;
         console.log(imgUrl);
 
-        var urlInput = document.getElementById("plane");
+        var urlInput = document.getElementById("staticImg");
         urlInput.value = imgUrl;
     });
 
