--- a/src/main/resources/templates/usr/book/top/create.html
+++ b/src/main/resources/templates/usr/book/top/create.html
@@ -5,7 +5,7 @@
 <div layout:fragment="content" class="min-h-screen flex flex-col items-center gap-12 bg-base-200">
 
   <div th:replace="~{usr/book/fragment/create/valid :: valid}"></div>
-  <div th:replace="~{usr/book/fragment/create/form :: form(${bookCreateForm})}"></div>
+  <div th:replace="~{usr/book/fragment/create/form :: form(${bookCreateForm}, ${num})}"></div>
 
 </div>
 </html>
