feat: 개발자 매뉴 생성

--- a/src/main/resources/templates/layout/top-navbar.html
+++ b/src/main/resources/templates/layout/top-navbar.html
@@ -60,6 +60,9 @@
                     <a href="/category/create">카테고리 만들기</a>
                 </li>
 
+                <li th:if="${@rq.login && @rq.member.role.toString() != 'JUNIOR'}">
+                    <a href="/developer/menu">Developers</a>
+                </li>
 
                 <li th:if="${@rq.login}">
                     <a href="javascript:" onclick="$(this).next().submit();">로그아웃</a>
