feat: jwt 발급 구현

--- a/src/main/resources/templates/usr/developer/fragment/menu/join.html
+++ b/src/main/resources/templates/usr/developer/fragment/menu/join.html
@@ -4,10 +4,10 @@
 
     <div class="card-body">
         <div class="flex justify-between">
-            <h2 class="card-title" th:text="|2. 개발자 등록|"></h2>
+            <h2 class="card-title" th:text="|2. Access Key 발급|"></h2>
         </div>
-        <div class="text-xs mt-3" th:text="|개발자 등록을 하면 IN HUB 의 모든 API 를 이용할 수 있습니다.|"></div>
-        <button class="btn btn-primary w-full mt-3">등록하기</button>
+        <div class="text-xs mt-3" th:text="|Access Key 로 IN HUB 의 모든 API 를 이용할 수 있습니다.|"></div>
+        <a href="/developer/create" class="btn btn-primary w-full mt-3">발급 하기</a>
     </div>
 
 </div>
