feat: open api 도입 준비 완료 (#174)
* feat: book cover 선택 안할경우 랜덤 이미지 선택할 수 있도록 변경

* feat: feign 도입

* feat: book 기본 cover 이미지 추가

* feat: book 기본 cover 이미지 추가

* docs: html 수정

* fix: 문제 수정 안되는문제 해결

* feat: swagger 도입

* feat: swagger 세팅 완료

* feat: jjwt 적용

* feat: jwt token 생성 완료

* feat: jwt 도입 완료

* feat: 개발자 매뉴 생성

* feat: jwt 발급 구현

* feat: stats api 생성

--- a/src/main/resources/templates/usr/book/fragment/create/valid.html
+++ b/src/main/resources/templates/usr/book/fragment/create/valid.html
@@ -1,4 +1,14 @@
 <script th:fragment="valid">
+
+    document.addEventListener("DOMContentLoaded", function() {
+        var imgElement = document.getElementById("cover");
+        var imgUrl = imgElement.src;
+        console.log(imgUrl);
+
+        var urlInput = document.getElementById("staticImg");
+        urlInput.value = imgUrl;
+    });
+
     function JoinForm__submit(form) {
 
         //-- name 검증 --//
