--- a/src/main/resources/templates/usr/book/fragment/create/form.html
+++ b/src/main/resources/templates/usr/book/fragment/create/form.html
@@ -1,4 +1,4 @@
-<div th:fragment="form(bookCreateForm)"
+<div th:fragment="form(bookCreateForm, num)"
      class="hero mt-5 mb-12">
     <div class="hero-content flex-col lg:flex-row-reverse mb-12">
         <div class="card flex-shrink-0 w-full max-w-sm shadow-2xl bg-base-100">
@@ -13,17 +13,26 @@
                         <span class="label-text">문제집 커버</span>
                     </label>
 
-                    <div class="flex justify-center">
-                        <div class="mb-5">
+                    <div class="flex flex-col items-center mb-5">
+                        <div>
 
-                            <img class="h-48 w-40" id="previewImage"
-                                 src="/images/note/0004.jpg">
+                            <img id="cover" class="h-48 mb-2"
+                                 th:src="@{/images/book/__${num}__.png}">
                         </div>
+
+                        <a th:href="@{/book/create}">
+                            <span>북커버 새로고침</span>
+                            <span><i class="fa-sharp fa-solid fa-rotate-right"></i></span>
+                        </a>
+
                     </div>
 
                     <div class="flex flex-col mb-5">
                         <input type="file" id="profileImg" name="img"
                                class="file-input file-input-bordered w-full file-input-xs max-w-xs"/>
+                        <div class="text-xs mt-2">선택하지 않을경우 기본 북커버로 저장됩니다.</div>
+
+                        <input type="text" class="!hidden" th:field="*{staticImg}">
                     </div>
 
 
