--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -58,6 +58,11 @@
 <div th:replace="~{layout/top-navbar :: navbarFragment}"></div>
 <!-- nav-bar 끝 -->
 
+<ins class="kakao_ad_area" style="display:none;"
+     data-ad-unit = "DAN-SivEwxGPvIQBnf2r"
+     data-ad-width = "320"
+     data-ad-height = "50"></ins>
+<script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
 
 <!-- 비즈니스 레이아웃 시작 -->
 <main layout:fragment="content"></main>
