--- a/src/main/resources/templates/usr/member/mypage.html
+++ b/src/main/resources/templates/usr/member/mypage.html
@@ -21,7 +21,7 @@
                             <a class="badge ml-2" href="/member/profileUpdate">수정</a>
                         </div>
                         <div>
-                            <a href="/member/registration" th:if="${@rq.member.email == null}" class="badge badge-secondary">보안 강화하기</a>
+                            <a href="/member/registration" th:if="${@rq.member.email == null || @rq.member.email.blank}" class="badge badge-secondary">보안 강화하기</a>
                         </div>
                     </h2>
 
@@ -31,10 +31,7 @@
                             프로필 이미지
                         </div>
                         <div>
-                            <div class="mt-2 profile-img-box" th:if="${@rq.member.profileImg != null && !@rq.hasSocialProfile()}">
-                                <img class="profile-img" th:src="@{/images/profile/{filename}(filename=${@rq.member.profileImg})}">
-                            </div>
-                            <div class="mt-2 profile-img-box" th:if="${@rq.member.profileImg != null && @rq.hasSocialProfile()}">
+                            <div class="mt-2 profile-img-box" th:if="${@rq.member.profileImg != null}">
                                 <img class="profile-img" th:src="@{${@rq.member.profileImg}}">
                             </div>
                             <div class="mt-2 profile-img-box" th:if="${@rq.member.profileImg == null}">
