--- a/src/main/resources/templates/usr/underline/fragment/book/title.html
+++ b/src/main/resources/templates/usr/underline/fragment/book/title.html
@@ -33,10 +33,11 @@
                     <div class="text-[4px]" th:utext="|정답률 ${book.accuracy}%|"></div>
                 </div>
 
-                <div class="flex gap-3">
+                <a href="javascript:" onclick="$(this).next().submit();" class="flex gap-3">
                     <div class="text-sm"><i class="fa-regular fa-heart"></i></div>
-                    <div class="text-[4px]" th:text="|${book.recommend}명의 좋아요|"></div>
-                </div>
+                    <div class="text-[4px]" th:text="|${book.likeList.size}명의 좋아요|"></div>
+                </a>
+                <form class="!hidden" hidden th:action="@{/book/like/{id}(id = ${book.id})}" method="POST"></form>
 
             </div>
 
