--- a/src/main/resources/templates/usr/underline/fragment/book/title.html
+++ b/src/main/resources/templates/usr/underline/fragment/book/title.html
@@ -1,4 +1,4 @@
-<div th:fragment="title(book)"
+<div th:fragment="title(book, like)"
      class="stats drop-shadow-lg w-80 mt-5 mb-3">
 
     <div class="stat place-items-center flex-row">
@@ -34,7 +34,11 @@
                 </div>
 
                 <a href="javascript:" onclick="$(this).next().submit();" class="flex gap-3">
-                    <div class="text-sm"><i class="fa-regular fa-heart"></i></div>
+
+                    <div th:unless="${like}"
+                         class="text-sm"><i class="fa-regular fa-heart"></i></div>
+                    <div th:if="${like}"
+                         class="text-sm text-red-400"><i class="fa-solid fa-heart"></i></div>
                     <div class="text-[4px]" th:text="|${book.likeList.size}명의 좋아요|"></div>
                 </a>
                 <form class="!hidden" hidden th:action="@{/book/like/{id}(id = ${book.id})}" method="POST"></form>
