--- a/src/main/resources/templates/usr/search/fragment/member/search.html
+++ b/src/main/resources/templates/usr/search/fragment/member/search.html
@@ -1,5 +1,5 @@
 <form th:fragment="search(searchForm)"
-      method="get" action="/search/question"
+      method="get" action="/search/member"
       th:object="${searchForm}"
       class="w-64 mt-5"
       onsubmit="JoinForm__submit(this); return false;">
