--- a/src/main/resources/templates/usr/search/fragment/search/search.html
+++ b/src/main/resources/templates/usr/search/fragment/search/search.html
@@ -1,7 +1,7 @@
 <form th:fragment="search(searchForm)"
       method="get" action="/search/book/name"
       th:object="${searchForm}"
-      class="w-64"
+      class="w-64 mt-5"
       onsubmit="JoinForm__submit(this); return false;">
 
     <div class="form-control w-full">
