chore: index에 채용 공고 창으로 이동되는 링크 생성

--- a/src/main/resources/templates/usr/index.html
+++ b/src/main/resources/templates/usr/index.html
@@ -13,5 +13,7 @@
 
     <div th:replace="~{usr/home/fragment/index/popular :: popular(${books})}"></div>
 
+    <div th:replace="~{usr/home/fragment/index/job :: job}"></div>
+
 </div>
 </html>
