feat: 크롤링 서버 DB에서 데이터를 가져와 메인 서버에 반환 (#190)
* feat: 마크다운 에디터 구현

* feat: view에서도 마크다운 적용

* feat: 파일 첨부 기능

* feat: 첨부파일 다운로드 기능

* chore: 다중 첨부기능 미구현

* feat: 크롤링 서버ì에서 데이터를 가져와 메인 서버에 반환

* chore: 충돌 해결

* feat: 크롤링 데이터 페이징 구현

* feat: 크롤링 데이터 검색 기능

* chore: index에 채용 공고 창으로 이동되는 링크 생성

--- a/src/main/resources/templates/usr/post/create.html
+++ b/src/main/resources/templates/usr/post/create.html
@@ -27,7 +27,9 @@
             <span class="badge">
             파일 첨부
             </span>
-            <input class="input input-bordered" type="file" name="file">
+
+            <input class="input input-bordered" type="file" name="file" multiple>
+
         </div>
         <div class="form-input">
             <span class="badge">
